Revision history for {{$dist->name}}

{{$NEXT}}
 - Fix ::Helper::ResultSet::DateMethods1 for Oracle (thanks Alexander Hartmaier!)

2.023006  2014-09-03 17:44:34-05:00 America/Chicago
 - Fix a few ::DateMethods1 methods when using a bound date (vs a column)

2.023005  2014-08-10 11:05:27-05:00 America/Chicago
 - Fix ::Row::SelfResultSet to correctly include CSA (Thanks Steve Kleiman!)

2.023004  2014-08-01 18:27:54-05:00 America/Chicago
 - Fix implementation of ::Row::SelfResultSet (fixes GH#34, thanks ribasushi for
   the heads up!)

2.023003  2014-07-21 21:22:27-05:00 America/Chicago
 - Fix ToJSON to use accessors if it needs to (Thanks Kevin Benson!)
 - Fix silly typo in ::Explain (Good catch Jonathan W. Taylor!)

2.023002  2014-06-28 15:04:15-05:00 America/Chicago
 - Remove silly layer of subtesting (thanks to new features in Test::Roo)
 - Remove silly sub wrapper in Explain internals (should moderately increase
   performance)

2.023001  2014-06-14 12:39:08-05:00 America/Chicago
 - Add handy SYNOPSIS to ::DateMethods1 (thanks for asking rjbs!)

2.023000  2014-05-26 19:33:01-05:00 America/Chicago
 - Add ::Shortcut::Explain RS helper

2.022000  2014-05-03 10:39:30-05:00 CST6CDT
 - Add ::Shortcut::ResultsExist RS helper (Olaf Alders)
 - Add abstract to ::DateMethods1::Announcement (Gregor Herrmann)

2.021001  2014-04-06 11:43:36-05:00 America/Chicago
 - Fix ::RemoveColumns to work with a specified `columns` (Anthony DeRobertis)
   (Fixes GH#27) Also fixes RT#91977/GH#24)

2.021000  2014-04-01 20:12:40-05:00 America/Chicago
 - Create Shortcut::Page and Shortcut::LimitedPage ResultSet helpers (wreis)

2.020001  2014-03-05 10:33:46CST-0600 America/Chicago
 - Make ::DateMethods1 tests paralellizable (thanks Alexander Hartmaier!)
 - fix ::Helper::ResultSet::DateMethods1 for Oracle (thanks Alexander Hartmaier!)
 - fix ABSTRACT on ::Helper::ResultSet::DateMethods1

2.020000  2014-03-04 08:31:39-06:00 America/Chicago
 - Add ::Helper::ResultSet::DateMethods1